# opensrc-2022

./: README.md  copy.c  factorial.bash  main.c  menu.bash  power.bash  reply.bash  rhead.bash  shift.bash  sum_builtin.bash
make-study/: Makefile
make-study/makelists/: CMakeLists.txt  main.c  reverse.h
make-study/makelists/lib_build/: CMakeLists.txt  reverse.c
