cmake_minimum_required(VERSION 3.0.2)
project(MyMain)
#set(PROJECT_LINK_LIBS libReverseCopy.so)
set(PROJECT_LINK_LIBS libReverseCopy.a)
link_directories(/mnt/share/cmake_practice/lib_bulid)
include_directories(/mnt/share/cmake_practice)
#add_executable(main_for_so main.c)
#target_link_libraries(main_for_so ${PROJECT_LINK_LIBS})
add_executable(main_for_a main.c)
target_link_libraries(main_for_a ${PROJECT_LINK_LIBS})
